// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project - Add Jobs - Job Result should not show the job category or eeo, when the job is a company job 1`] = `
<pf-add-job-result
  job={[Function Object]}
  jobClicked={[Function EventEmitter]}
  jobDetailClicked={[Function EventEmitter]}
  showJobBasedRangesJobMetadata="false"
  showJobLevelFamilyDescription="false"
  showJobSourceOrTitle={[Function Boolean]}
>
  <div
    class="result job-result-row"
  >
    <div
      class="d-flex justify-content-between"
    >
      <div
        class="d-flex "
      >
        <div
          class="job-title"
        >
           Accountant 
        </div>
        <div
          class="job-code"
        >
           (2345) 
        </div>
      </div>
      
      <div>
        <fa-icon
          class="fa-w-16 peer-icon"
          icon="exchange-alt"
          title="Job is matched to at least one exchange job"
        />
      </div>
    </div>
    <div
      class="d-flex flex-column job-subtitle"
    >
      
      <div>
        
        <div>
          PayFactors
        </div>
      </div>
    </div>
    <div
      class="d-flex mt-2"
    >
      <div
        class="link"
      >
         Hide Job Detail 
      </div>
    </div>
    
    <div
      class="job-detail"
    >
      <table>
        <tbody>
          <tr>
            <th>
              Base MRP:
            </th>
            
            <td>
              56.3
            </td>
            
          </tr>
          <tr>
            <th>
              TCC MRP:
            </th>
            
            <td>
              58.1
            </td>
            
          </tr>
          
          
          <tr>
            <th>
              Job Level:
            </th>
            <td>
              II
            </td>
          </tr>
          <tr>
            <th>
              Job Family:
            </th>
            <td>
              Finance
            </td>
          </tr>
          
          <tr>
            <th>
              FLSA:
            </th>
            <td>
              Exempt
            </td>
          </tr>
          
          
          
          
          <tr>
            <th>
              UdfField1
            </th>
            <td>
              UdfValue
            </td>
          </tr>
          
          <tr>
            <th>
              Job Description:
            </th>
            <td>
              
              
              <pf-ellipsis-view-more />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</pf-add-job-result>
`;

exports[`Project - Add Jobs - Job Result should show a peer icon, when the jobs is mapped to an exchange 1`] = `
<pf-add-job-result
  job={[Function Object]}
  jobClicked={[Function EventEmitter]}
  jobDetailClicked={[Function EventEmitter]}
  showJobBasedRangesJobMetadata="false"
  showJobLevelFamilyDescription="false"
  showJobSourceOrTitle={[Function Boolean]}
>
  <div
    class="result job-result-row"
  >
    <div
      class="d-flex justify-content-between"
    >
      <div
        class="d-flex "
      >
        <div
          class="job-title"
        >
           Accountant 
        </div>
        <div
          class="job-code"
        >
           (2345) 
        </div>
      </div>
      
      <div>
        <fa-icon
          class="fa-w-16 peer-icon"
          icon="exchange-alt"
          title="Job is matched to at least one exchange job"
        />
      </div>
    </div>
    <div
      class="d-flex flex-column job-subtitle"
    >
      
      <div>
        
        <div>
          PayFactors
        </div>
      </div>
    </div>
    <div
      class="d-flex mt-2"
    >
      <div
        class="link"
      >
         Show Job Detail 
      </div>
    </div>
    
  </div>
</pf-add-job-result>
`;

exports[`Project - Add Jobs - Job Result should show the job detail 1`] = `
<pf-add-job-result
  job={[Function Object]}
  jobClicked={[Function EventEmitter]}
  jobDetailClicked={[Function EventEmitter]}
  showJobBasedRangesJobMetadata="false"
  showJobLevelFamilyDescription="false"
  showJobSourceOrTitle={[Function Boolean]}
>
  <div
    class="result job-result-row"
  >
    <div
      class="d-flex justify-content-between"
    >
      <div
        class="d-flex "
      >
        <div
          class="job-title"
        >
           Accountant 
        </div>
        <div
          class="job-code"
        >
           (2345) 
        </div>
      </div>
      
    </div>
    <div
      class="d-flex flex-column job-subtitle"
    >
      
      <div>
        
        <div>
          PayFactors
        </div>
      </div>
    </div>
    <div
      class="d-flex mt-2"
    >
      <div
        class="link"
      >
         Hide Job Detail 
      </div>
    </div>
    
    <div
      class="job-detail"
    >
      <table>
        <tbody>
          <tr>
            <th>
              Base MRP:
            </th>
            
            <td>
              56.3
            </td>
            
          </tr>
          <tr>
            <th>
              TCC MRP:
            </th>
            
            <td>
              58.1
            </td>
            
          </tr>
          
          
          <tr>
            <th>
              Job Level:
            </th>
            <td>
              II
            </td>
          </tr>
          <tr>
            <th>
              Job Family:
            </th>
            <td>
              Finance
            </td>
          </tr>
          
          <tr>
            <th>
              FLSA:
            </th>
            <td>
              Exempt
            </td>
          </tr>
          
          
          <tr>
            <th>
              Job Category:
            </th>
            <td>
              Finance
            </td>
          </tr>
          <tr>
            <th>
              EEO:
            </th>
            <td>
              Typically Professionals
            </td>
          </tr>
          
          
          
          <tr>
            <th>
              UdfField1
            </th>
            <td>
              UdfValue
            </td>
          </tr>
          
          <tr>
            <th>
              Job Description:
            </th>
            <td>
              
              
              <pf-ellipsis-view-more />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</pf-add-job-result>
`;
